--- a/frontend/src/components/map/Map.module.css
+++ b/frontend/src/components/map/Map.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  z-index: 1;
   width: 100%;
   overflow: hidden;
   border-radius: 20px;
